--- a/doc/data-loading-and-processing/loading-pipeline.ipynb
+++ b/doc/data-loading-and-processing/loading-pipeline.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Data loading"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23466654"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 1,
    "source": [
     "import os\n",
     "import shutil\n",
@@ -49,15 +36,83 @@
     "tes_url = \"https://github.com/tesseract-ocr/tessdata/raw/master/eng.traineddata\"\n",
     "r = requests.get(tes_url, allow_redirects=True)\n",
     "open(\"eng.traineddata\", \"wb\").write(r.content)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "23466654"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "source": [
+    "docs = pd.read_excel(\"../../data/un-global-impact.xlsx\", sheet_name=[0,1])\n",
+    "docs = pd.concat([v.loc[:,\"Participant\":\"Link\"] for k,v in docs.items()])\n",
+    "# get only the eng ones with a link\n",
+    "docs = docs[(docs.Language==\"english\") & (docs.Link.notnull())].\\\n",
+    "    sort_values([\"Year\", \"Participant\", \"Link\"]).drop_duplicates(\"Link\").\\\n",
+    "        reset_index(drop=True)\n",
+    "#docs = docs.loc[[74,75,76,77,78,79,80,81,82,151,544,568,810,863],:].reset_index(drop=True)\n",
+    "#docs = docs.loc[range(0,10),:].reset_index(drop=True)\n",
+    "\n",
+    "# file types\n",
+    "file_type = docs.Link.str.split(\"/\").apply(lambda x: x[-1].split(\"?\")[0].split(\".\")[-1]).str.lower()\n",
+    "docs[\"FileType\"] = [\"\" if f not in set([\"pdf\", \"docx\", \"pptx\", \"doc\", \"docm\", \"htm\", \"html\"]) else f\\\n",
+    "    for f in file_type.values]\n",
+    "# prepare file names\n",
+    "def sanitize_names(r):\n",
+    "    ind = str(r.name).rjust(4,\"0\")\n",
+    "    year = str(r.Year)\n",
+    "    part = r.Participant\n",
+    "    part = part.lower()\n",
+    "    part = re.sub(\"[.!?\\\\-/,\\\"\\(\\)\\+'\\|]\",\" \",part)\n",
+    "    part = re.sub(\"&\",\" and \",part)\n",
+    "    part = re.sub(\" +\",\"-\",part)\n",
+    "    part = re.sub(\"-$\",\"\",part)\n",
+    "    pp = [ind, year, part]\n",
+    "    res = \"-\".join(pp)\n",
+    "    if len(r.FileType)>0:\n",
+    "        res = res+\".\"+r.FileType\n",
+    "    return res\n",
+    "docs[\"FileName\"] = docs.apply(sanitize_names, axis=1)\n",
+    "\n",
+    "docs.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "                       Participant                          Sector  Country  \\\n",
+       "0                      AGNI MOTORS  Electronic & Electrical Equ...    India   \n",
+       "1                        AMBEV S/A                       Beverages   Brazil   \n",
+       "2  Access Spectrum Company Limited  Technology Hardware & Equip...  Myanmar   \n",
+       "3                 Addit Sp. z o.o.             General Industrials   Poland   \n",
+       "4                       Ahlsell AB  Technology Hardware & Equip...   Sweden   \n",
+       "\n",
+       "   Year Language                                               Link FileType  \\\n",
+       "0  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
+       "1  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
+       "2  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
+       "3  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
+       "4  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
+       "\n",
+       "                                        FileName  \n",
+       "0                      0000-2019-agni-motors.pdf  \n",
+       "1                        0001-2019-ambev-s-a.pdf  \n",
+       "2  0002-2019-access-spectrum-company-limited.pdf  \n",
+       "3                   0003-2019-addit-sp-z-o-o.pdf  \n",
+       "4                       0004-2019-ahlsell-ab.pdf  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -146,82 +201,17 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                       Participant                          Sector  Country  \\\n",
-       "0                      AGNI MOTORS  Electronic & Electrical Equ...    India   \n",
-       "1                        AMBEV S/A                       Beverages   Brazil   \n",
-       "2  Access Spectrum Company Limited  Technology Hardware & Equip...  Myanmar   \n",
-       "3                 Addit Sp. z o.o.             General Industrials   Poland   \n",
-       "4                       Ahlsell AB  Technology Hardware & Equip...   Sweden   \n",
-       "\n",
-       "   Year Language                                               Link FileType  \\\n",
-       "0  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "1  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "2  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "3  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "4  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "\n",
-       "                                        FileName  \n",
-       "0                      0000-2019-agni-motors.pdf  \n",
-       "1                        0001-2019-ambev-s-a.pdf  \n",
-       "2  0002-2019-access-spectrum-company-limited.pdf  \n",
-       "3                   0003-2019-addit-sp-z-o-o.pdf  \n",
-       "4                       0004-2019-ahlsell-ab.pdf  "
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
-   "source": [
-    "docs = pd.read_excel(\"../../data/un-global-impact.xlsx\", sheet_name=[0,1])\n",
-    "docs = pd.concat([v.loc[:,\"Participant\":\"Link\"] for k,v in docs.items()])\n",
-    "# get only the eng ones with a link\n",
-    "docs = docs[(docs.Language==\"english\") & (docs.Link.notnull())].\\\n",
-    "    sort_values([\"Year\", \"Participant\", \"Link\"]).drop_duplicates(\"Link\").\\\n",
-    "        reset_index(drop=True)\n",
-    "#docs = docs.loc[[74,75,76,77,78,79,80,81,82,151,544,568,810,863],:].reset_index(drop=True)\n",
-    "#docs = docs.loc[range(0,10),:].reset_index(drop=True)\n",
-    "\n",
-    "# file types\n",
-    "file_type = docs.Link.str.split(\"/\").apply(lambda x: x[-1].split(\"?\")[0].split(\".\")[-1]).str.lower()\n",
-    "docs[\"FileType\"] = [\"\" if f not in set([\"pdf\", \"docx\", \"pptx\", \"doc\", \"docm\", \"htm\", \"html\"]) else f\\\n",
-    "    for f in file_type.values]\n",
-    "# prepare file names\n",
-    "def sanitize_names(r):\n",
-    "    ind = str(r.name).rjust(4,\"0\")\n",
-    "    year = str(r.Year)\n",
-    "    part = r.Participant\n",
-    "    part = part.lower()\n",
-    "    part = re.sub(\"[.!?\\\\-/,\\\"\\(\\)\\+'\\|]\",\" \",part)\n",
-    "    part = re.sub(\"&\",\" and \",part)\n",
-    "    part = re.sub(\" +\",\"-\",part)\n",
-    "    part = re.sub(\"-$\",\"\",part)\n",
-    "    pp = [ind, year, part]\n",
-    "    res = \"-\".join(pp)\n",
-    "    if len(r.FileType)>0:\n",
-    "        res = res+\".\"+r.FileType\n",
-    "    return res\n",
-    "docs[\"FileName\"] = docs.apply(sanitize_names, axis=1)\n",
-    "\n",
-    "docs.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The download took 51.62 mins on the threadpool back-end.\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
    "source": [
     "# download\n",
     "raw_path = \"../../data/raw-reports/\"\n",
@@ -237,14 +227,30 @@
     "   exe.map(download_report,  docs.index) # docs.index\n",
     "td = (datetime.datetime.now()-st).seconds/60\n",
     "print(\"The download took {:.2f} mins on the threadpool back-end.\".format(td))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The download took 55.62 mins on the threadpool back-end.\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "source": [
+    "# annotate files\n",
+    "docs[\"FileTypeMagic\"] = docs.FileName.apply(lambda x: magic.from_file(raw_path+x,\n",
+    "    mime=True))\n",
+    "docs[\"FileTypeMagic\"].value_counts()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "application/pdf                                                              2412\n",
@@ -252,38 +258,20 @@
        "text/html                                                                       8\n",
        "application/vnd.openxmlformats-officedocument.presentationml.presentation       8\n",
        "application/msword                                                              2\n",
-       "application/octet-stream                                                        1\n",
        "inode/x-empty                                                                   1\n",
+       "application/octet-stream                                                        1\n",
        "Name: FileTypeMagic, dtype: int64"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "# annotate files\n",
-    "docs[\"FileTypeMagic\"] = docs.FileName.apply(lambda x: magic.from_file(raw_path+x,\n",
-    "    mime=True))\n",
-    "docs[\"FileTypeMagic\"].value_counts()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type conversion finished in 133.6 mins with 2456 pdf files and the remainder of 10 raw files.\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
    "source": [
     "# prep\n",
     "text_path = \"../../data/text-reports/\"\n",
@@ -318,6 +306,8 @@
     "        cmd = \"./gs -sDEVICE=ocr -r200 -dQUIET -dBATCH -dNOPAUSE -sOutputFile=\"+\\\n",
     "            output_file+\" \"+input_file\n",
     "        docs.loc[i, \"ConversionStatus\"] = os.system(cmd)\n",
+    "        with open(output_file, \"r\") as of:\n",
+    "            docs.loc[i, \"OutputText\"] = of.read().replace(\"\\n\", \"\")\n",
     "    except:\n",
     "        print(\"OCR of the file {} failed.\".format(input_file))\n",
     "        continue\n",
@@ -329,19 +319,38 @@
     "pdf_remainder_count = docs.shape[0]-pdf_count\n",
     "print(\"Type conversion finished in {} mins with {} pdf files and the remainder of {} raw files.\".\\\n",
     "    format(td, pdf_count, pdf_remainder_count,))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "OCR of the file ../../data/raw-reports/0151-2020-3m-españa-s-l.pdf failed.\n"
+     ]
+    }
+   ],
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
-    "#text_path = \"../../data/text-reports-0/\"\n",
-    "#if not os.path.exists(text_path):\n",
+    "docs.to_pickle(\"../../data/metadata_and_texts.pkl\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# text_path = \"../../data/text-reports-0/\"\n",
+    "# if not os.path.exists(text_path):\n",
     "#    os.mkdir(text_path)#\n",
     "\n",
-    "#def convert_to_text(ind=0, df=docs.dropna(), output_path=text_path):\n",
+    "# def convert_to_text(ind=0, df=docs.dropna(), output_path=text_path):\n",
     "#    pdf_file = df.loc[ind].ConvertedFile\n",
     "#    text_file = output_path+df.loc[ind].FileName.split(\".\")[0]+\".txt\"\n",
     "#    imgs = pdf2image.convert_from_path(pdf_file, dpi=72)\n",
@@ -352,12 +361,23 @@
     "#        os.remove(text_file)\n",
     "#    open(text_file, \"w\").write(\" \".join(resulting_text))\n",
     "\n",
-    "#st = datetime.datetime.now()\n",
-    "#for i in docs.dropna().index:\n",
+    "# st = datetime.datetime.now()\n",
+    "# for i in docs.dropna().index:\n",
     "#    convert_to_text(ind=i, df=docs.dropna())\n",
-    "#td = (datetime.datetime.now()-st).seconds/60\n",
-    "#print(\"The ocr process took {:.2f} mins on the single thread back-end.\".format(td))"
-   ]
+    "# td = (datetime.datetime.now()-st).seconds/60\n",
+    "# print(\"The ocr process took {:.2f} mins on the single thread back-end.\".format(td))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# text file to single "
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -365,8 +385,8 @@
    "hash": "9e6255f42a0ba260834f18bd8f97cae298885bfee9b81baa7cf63f030f508208"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('env': venv)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('env': venv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -378,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
