Fiddle with LSTM FAST OCR.

--- a/doc/data-loading-and-processing/loading-pipeline.ipynb
+++ b/doc/data-loading-and-processing/loading-pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import shutil\n",
     "shutil.rmtree(\"../../data/raw-reports/\",ignore_errors=True)\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "import os\n",
     "import shutil\n",
@@ -44,27 +44,16 @@
     "shutil.rmtree(\"ghostscript-9.54.0-linux-x86_64\", ignore_errors=True)\n",
     "\n",
     "# tes language model\n",
-    "tes_url = \"https://github.com/tesseract-ocr/tessdata/raw/master/eng.traineddata\"\n",
+    "tes_url = \"https://github.com/tesseract-ocr/tessdata_fast/raw/master/eng.traineddata\"\n",
     "r = requests.get(tes_url, allow_redirects=True)\n",
     "open(\"eng.traineddata\", \"wb\").write(r.content)"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "23466654"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "docs = pd.read_excel(\"../../data/un-global-impact.xlsx\", sheet_name=[0,1])\n",
     "docs = pd.concat([v.loc[:,\"Participant\":\"Link\"] for k,v in docs.items()])\n",
@@ -74,7 +63,7 @@
     "        reset_index(drop=True)\n",
     "#docs = docs.loc[[74,75,76,77,78,79,80,81,82,151,544,568,810,863],:].reset_index(drop=True)\n",
     "#docs = docs.loc[[74,82],:].reset_index(drop=True)\n",
-    "#docs = docs.loc[range(0,100),:]\n",
+    "docs = docs.loc[range(0,500),:]\n",
     "\n",
     "# file types\n",
     "file_type = docs.Link.str.split(\"/\").apply(lambda x: x[-1].split(\"?\")[0].split(\".\")[-1]).str.lower()\n",
@@ -101,131 +90,12 @@
     "\n",
     "docs.head()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                       Participant                          Sector  Country  \\\n",
-       "0                      AGNI MOTORS  Electronic & Electrical Equ...    India   \n",
-       "1                        AMBEV S/A                       Beverages   Brazil   \n",
-       "2  Access Spectrum Company Limited  Technology Hardware & Equip...  Myanmar   \n",
-       "3                 Addit Sp. z o.o.             General Industrials   Poland   \n",
-       "4                       Ahlsell AB  Technology Hardware & Equip...   Sweden   \n",
-       "\n",
-       "   Year Language                                               Link FileType  \\\n",
-       "0  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "1  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "2  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "3  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "4  2019  english  https://ungc-production.s3.us-west-2.amazonaws...      pdf   \n",
-       "\n",
-       "                                        FileName  \n",
-       "0                      0000-2019-agni-motors.pdf  \n",
-       "1                        0001-2019-ambev-s-a.pdf  \n",
-       "2  0002-2019-access-spectrum-company-limited.pdf  \n",
-       "3                   0003-2019-addit-sp-z-o-o.pdf  \n",
-       "4                       0004-2019-ahlsell-ab.pdf  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Participant</th>\n",
-       "      <th>Sector</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Language</th>\n",
-       "      <th>Link</th>\n",
-       "      <th>FileType</th>\n",
-       "      <th>FileName</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AGNI MOTORS</td>\n",
-       "      <td>Electronic &amp; Electrical Equ...</td>\n",
-       "      <td>India</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>english</td>\n",
-       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
-       "      <td>pdf</td>\n",
-       "      <td>0000-2019-agni-motors.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AMBEV S/A</td>\n",
-       "      <td>Beverages</td>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>english</td>\n",
-       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
-       "      <td>pdf</td>\n",
-       "      <td>0001-2019-ambev-s-a.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Access Spectrum Company Limited</td>\n",
-       "      <td>Technology Hardware &amp; Equip...</td>\n",
-       "      <td>Myanmar</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>english</td>\n",
-       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
-       "      <td>pdf</td>\n",
-       "      <td>0002-2019-access-spectrum-company-limited.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Addit Sp. z o.o.</td>\n",
-       "      <td>General Industrials</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>english</td>\n",
-       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
-       "      <td>pdf</td>\n",
-       "      <td>0003-2019-addit-sp-z-o-o.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ahlsell AB</td>\n",
-       "      <td>Technology Hardware &amp; Equip...</td>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>english</td>\n",
-       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
-       "      <td>pdf</td>\n",
-       "      <td>0004-2019-ahlsell-ab.pdf</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "# download\n",
     "raw_path = \"../../data/raw-reports/\"\n",
@@ -242,50 +112,24 @@
     "td = (datetime.datetime.now()-st).seconds/60\n",
     "print(\"The download took {:.2f} mins on the threadpool back-end.\".format(td))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The download took 54.20 mins on the threadpool back-end.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "# annotate files\n",
     "docs[\"FileTypeMagic\"] = docs.FileName.apply(lambda x: magic.from_file(raw_path+x,\n",
     "    mime=True))\n",
     "docs[\"FileTypeMagic\"].value_counts()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "application/pdf                                                              2412\n",
-       "application/vnd.openxmlformats-officedocument.wordprocessingml.document        34\n",
-       "application/vnd.openxmlformats-officedocument.presentationml.presentation       8\n",
-       "text/html                                                                       8\n",
-       "application/msword                                                              2\n",
-       "inode/x-empty                                                                   1\n",
-       "application/octet-stream                                                        1\n",
-       "Name: FileTypeMagic, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "# filter & convert\n",
     "\n",
@@ -315,20 +159,12 @@
     "print(\"Type conversion finished in {:.2f} mins with {} pdf files and the remainder of {} raw files.\".\\\n",
     "    format(td, pdf_count, pdf_remainder_count,))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Type conversion finished in 2.45 mins with 51 pdf files and the remainder of 2 raw files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "# ocr in parallel\n",
     "\n",
@@ -350,12 +186,12 @@
     "    output_file =  data_dir+\"text-reports/\"+row.FileName.split(\".\")[0]+\".txt\"\n",
     "    # try to ocr the files\n",
     "    try:\n",
-    "        cmd = \"./gs -sDEVICE=ocr -r300 -dQUIET -dBATCH -dNOPAUSE -sOutputFile=\"+\\\n",
+    "        cmd = \"./gs -sDEVICE=ocr -r200 -dQUIET -dBATCH -dNOPAUSE -sOutputFile=\"+\\\n",
     "            output_file+\" \"+input_file\n",
     "        row[\"OCRStatus\"] = os.system(cmd)\n",
     "        row[\"OutputFileName\"] = output_file\n",
     "        with open(output_file, \"r\") as of:\n",
-    "            row[\"OutputText\"] = of.read().replace(\"\\n\", \"\")\n",
+    "            row[\"OutputText\"] = of.read().replace(\"\\n\", \" \")\n",
     "    except:\n",
     "        print(\"OCR of the file {} failed.\".format(input_file))\n",
     "        row[\"OutputFileName\"] = np.nan\n",
@@ -375,24 +211,12 @@
     "print(\"Type conversion finished in {:.2f} mins with {} pdf files and the remainder of {} raw files.\".\\\n",
     "     format(td, text_count-text_remainder_count, pdf_remainder_count))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "OCR of the file ../../data/raw-reports/0151-2020-3m-españa-s-l.pdf failed.\n",
-      "OCR of the file ../../data/raw-reports/../../data/raw-reports/1226-2020-investor-ab.pdf failed.\n",
-      "OCR of the file ../../data/raw-reports/../../data/raw-reports/1585-2020-multibank-inc.pdf failed.\n",
-      "OCR of the file ../../data/raw-reports/2183-2020-tdc-a-s.pdf failed.\n",
-      "Type conversion finished in 982.63 mins with 2462 pdf files and the remainder of 2 raw files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "docs_augmented.to_pickle(\"../../data/docs-augmented.pkl\")"
    ],
