--- a/doc/data-loading-and-processing/loading-pipeline.ipynb
+++ b/doc/data-loading-and-processing/loading-pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "import shutil\n",
     "shutil.rmtree(\"../../data/raw-reports/\",ignore_errors=True)\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import os\n",
     "import shutil\n",
@@ -48,22 +48,33 @@
     "r = requests.get(tes_url, allow_redirects=True)\n",
     "open(\"eng.traineddata\", \"wb\").write(r.content)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4113088"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "docs = pd.read_excel(\"../../data/un-global-impact.xlsx\", sheet_name=[0,1])\n",
-    "docs = pd.concat([v.loc[:,\"Participant\":\"Link\"] for k,v in docs.items()])\n",
+    "docs = pd.concat([v.loc[:,\"Participant\":\"EconomyType\"] for k,v in docs.items()])\n",
     "# get only the eng ones with a link\n",
     "docs = docs[(docs.Language==\"english\") & (docs.Link.notnull())].\\\n",
     "    sort_values([\"Year\", \"Participant\", \"Link\"]).drop_duplicates(\"Link\").\\\n",
     "        reset_index(drop=True)\n",
     "#docs = docs.loc[[74,75,76,77,78,79,80,81,82,151,544,568,810,863],:].reset_index(drop=True)\n",
     "#docs = docs.loc[[74,82],:].reset_index(drop=True)\n",
-    "docs = docs.loc[range(0,500),:]\n",
+    "#docs = docs.loc[range(0,100),:]\n",
     "\n",
     "# file types\n",
     "file_type = docs.Link.str.split(\"/\").apply(lambda x: x[-1].split(\"?\")[0].split(\".\")[-1]).str.lower()\n",
@@ -90,12 +101,137 @@
     "\n",
     "docs.head()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Language</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>EconomyType</th>\n",
+       "      <th>FileType</th>\n",
+       "      <th>FileName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AGNI MOTORS</td>\n",
+       "      <td>Electronic &amp; Electrical Equ...</td>\n",
+       "      <td>India</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>english</td>\n",
+       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>0000-2019-agni-motors.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMBEV S/A</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>english</td>\n",
+       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>0001-2019-ambev-s-a.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Access Spectrum Company Limited</td>\n",
+       "      <td>Technology Hardware &amp; Equip...</td>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>english</td>\n",
+       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>0002-2019-access-spectrum-company-limited.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Addit Sp. z o.o.</td>\n",
+       "      <td>General Industrials</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>english</td>\n",
+       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>0003-2019-addit-sp-z-o-o.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ahlsell AB</td>\n",
+       "      <td>Technology Hardware &amp; Equip...</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>english</td>\n",
+       "      <td>https://ungc-production.s3.us-west-2.amazonaws...</td>\n",
+       "      <td>Advanced</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>0004-2019-ahlsell-ab.pdf</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Participant                          Sector  Country  \\\n",
+       "0                      AGNI MOTORS  Electronic & Electrical Equ...    India   \n",
+       "1                        AMBEV S/A                       Beverages   Brazil   \n",
+       "2  Access Spectrum Company Limited  Technology Hardware & Equip...  Myanmar   \n",
+       "3                 Addit Sp. z o.o.             General Industrials   Poland   \n",
+       "4                       Ahlsell AB  Technology Hardware & Equip...   Sweden   \n",
+       "\n",
+       "   Year Language                                               Link  \\\n",
+       "0  2019  english  https://ungc-production.s3.us-west-2.amazonaws...   \n",
+       "1  2019  english  https://ungc-production.s3.us-west-2.amazonaws...   \n",
+       "2  2019  english  https://ungc-production.s3.us-west-2.amazonaws...   \n",
+       "3  2019  english  https://ungc-production.s3.us-west-2.amazonaws...   \n",
+       "4  2019  english  https://ungc-production.s3.us-west-2.amazonaws...   \n",
+       "\n",
+       "  EconomyType FileType                                       FileName  \n",
+       "0  Developing      pdf                      0000-2019-agni-motors.pdf  \n",
+       "1  Developing      pdf                        0001-2019-ambev-s-a.pdf  \n",
+       "2  Developing      pdf  0002-2019-access-spectrum-company-limited.pdf  \n",
+       "3  Developing      pdf                   0003-2019-addit-sp-z-o-o.pdf  \n",
+       "4    Advanced      pdf                       0004-2019-ahlsell-ab.pdf  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "# download\n",
     "raw_path = \"../../data/raw-reports/\"\n",
@@ -107,29 +243,55 @@
     "    open(output_path+df.loc[ind].FileName, \"wb\").write(r.content)\n",
     "# par-all\n",
     "st = datetime.datetime.now()\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=16) as exe: \n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=32) as exe: \n",
     "   exe.map(download_report,  docs.index) # docs.index\n",
     "td = (datetime.datetime.now()-st).seconds/60\n",
     "print(\"The download took {:.2f} mins on the threadpool back-end.\".format(td))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The download took 42.97 mins on the threadpool back-end.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "# annotate files\n",
     "docs[\"FileTypeMagic\"] = docs.FileName.apply(lambda x: magic.from_file(raw_path+x,\n",
     "    mime=True))\n",
     "docs[\"FileTypeMagic\"].value_counts()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "application/pdf                                                              2411\n",
+       "application/vnd.openxmlformats-officedocument.wordprocessingml.document        34\n",
+       "text/html                                                                       9\n",
+       "application/vnd.openxmlformats-officedocument.presentationml.presentation       8\n",
+       "application/msword                                                              2\n",
+       "inode/x-empty                                                                   1\n",
+       "application/octet-stream                                                        1\n",
+       "Name: FileTypeMagic, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "# filter & convert\n",
     "\n",
@@ -159,12 +321,20 @@
     "print(\"Type conversion finished in {:.2f} mins with {} pdf files and the remainder of {} raw files.\".\\\n",
     "    format(td, pdf_count, pdf_remainder_count,))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Type conversion finished in 2.52 mins with 51 pdf files and the remainder of 3 raw files.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "# ocr in parallel\n",
     "\n",
@@ -201,7 +371,7 @@
     "    return row\n",
     "\n",
     "from joblib import Parallel, delayed\n",
-    "temp_docs = Parallel(n_jobs=8, backend=\"multiprocessing\")(\n",
+    "temp_docs = Parallel(n_jobs=16, backend=\"multiprocessing\")(\n",
     "    delayed(doc2text)(docs.loc[i,:], \"../../data/\") for i in docs.index)\n",
     "docs_augmented = pd.concat(temp_docs, axis=1).transpose()    \n",
     "td = (datetime.datetime.now()-st).seconds/60\n",
@@ -211,12 +381,25 @@
     "print(\"Type conversion finished in {:.2f} mins with {} pdf files and the remainder of {} raw files.\".\\\n",
     "     format(td, text_count-text_remainder_count, pdf_remainder_count))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "OCR of the file ../../data/raw-reports/0151-2020-3m-españa-s-l.pdf failed.\n",
+      "OCR of the file ../../data/raw-reports/../../data/raw-reports/0885-2020-fbn-holdings-plc.pdf failed.\n",
+      "OCR of the file ../../data/raw-reports/../../data/raw-reports/1226-2020-investor-ab.pdf failed.\n",
+      "OCR of the file ../../data/raw-reports/../../data/raw-reports/1585-2020-multibank-inc.pdf failed.\n",
+      "OCR of the file ../../data/raw-reports/2183-2020-tdc-a-s.pdf failed.\n",
+      "Type conversion finished in 771.37 mins with 2461 pdf files and the remainder of 3 raw files.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "docs_augmented.to_pickle(\"../../data/docs-augmented.pkl\")"
    ],
@@ -226,7 +409,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "869e4d1e7ddd42a66e036976948220a197e7d4eeb5f94674d9bf266d7eab4c92"
+   "hash": "9e6255f42a0ba260834f18bd8f97cae298885bfee9b81baa7cf63f030f508208"
   },
   "kernelspec": {
    "name": "python3",
