--- a/doc/topic-modeling/modeling-report.Rmd
+++ b/doc/topic-modeling/modeling-report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "#zerowaste subset - topic modeling report"
+title: "Corporate social responsibility - topic modeling report"
 output: github_document
 ---
 
