--- a/doc/topic_modeling/presentation_example.Rmd
+++ b/doc/topic_modeling/presentation_example.Rmd
@@ -82,7 +82,7 @@ for(r in 1:nrow(sweep_df)){
 ```
 
 ```{r}
-n_topics = 8
+n_topics = 11
 stm_model = stm(documents=out$documents, vocab=out$vocab, data=out$meta,
   prevalence=formula, verbose=F, K=n_topics, seed=n_topics, max.em.its=750,
   init.type="Spectral")
@@ -135,6 +135,21 @@ plot(estimated_effect, model=stm_model, topics=1:stm_model$settings$dim$K, metho
   xlim=c(-0.15,0.1), verbose.labels=F, main="diff in topical prevalence between adv & dev economies",
   labeltype="custom", custom.labels = paste0("T", 1:stm_model$settings$dim$K),
   xlab = "diff", cex.main=0.8, cex.axis=0.8, cex.lab=0.8)
+```
+
+```{r sector_prevalence, fig.width=8, fig.height=6, fig.align="center"}
+# prevalence across the sector
+sector_prevalence = stm_model$theta %>% as.data.frame() %>%
+  mutate(sector=docs$sector) %>% group_by(sector) %>%
+  summarise(across(everything(), mean), n=n()) %>%
+  arrange(desc(n))
+
+par(mfrow=c(2,3))
+for (i in 1:6){
+sector = sector_prevalence$sector[i]
+barplot(as.matrix(sector_prevalence[i,12:2]),
+  names.arg = paste0("T",11:1), xlim=c(0,.45),
+  col="gray", horiz=T, las=1, xlab="expected topical prevalence", main=sector)}
 ```
 
 ### Similarity
